# effective_python

./: README.md
.github/workflows/: ci.yaml
chapter01/: README.md
chapter02/: README.md
chapter03/: README.md
chapter04/: README.md
chapter05/: README.md
chapter06/: README.md
chapter07/: README.md  code58.py  code59.py  code60.py  code61.py  code63.py
chapter08/: README.md
chapter09/: README.md
chapter10/: README.md
test/: .flake8  pyproject.toml
test/src/: main.py
test/tests/: test_main.py
